<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorMaterialGrey300"
        app:boxBackgroundMode="filled"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:fontFamily="Roboto"
            android:hint="@null"
            android:padding="18dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="#212121"
            android:textSize="24sp"
            tools:text="1+1"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout"
            app:layout_constraintStart_toStartOf="@id/text_input_layout"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorMaterialGrey300"
        android:fontFamily="Roboto"
        android:padding="12dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="#212121"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        tools:ignore="NotSibling" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clear_all"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_result"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/button_clear_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_clear_all"
        app:layout_constraintTop_toTopOf="@+id/button_clear_all" />

    <!--row 1-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear_all" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <!--row 2-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button_times"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_times"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/times"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <!--row 3-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_div"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/div"

        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button1"
        />

    <!--row 4-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zeros"
        app:layout_constraintBottom_toBottomOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equal"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"

        app:layout_constraintBottom_toBottomOf="@+id/button_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />


</androidx.constraintlayout.widget.ConstraintLayout>